# Homework_30

./: db.sqlite3  manage.py  pyproject.toml  requirements.txt
ads/: models.py  serializers.py  views.py
ads/migrations/: 0001_initial.py  0002_rename_author_id_ad_author.py  0003_rename_category_id_ad_category.py  0004_alter_ad_options_alter_category_options.py  0005_remove_ad_address.py
ads/urls/: ad.py  cat.py  user.py
datasets/: ads.json  csv_to_json.py  locations.json  users.json
homework_27/: asgi.py  settings.py  urls.py  wsgi.py
homework_28/: settings.py  urls.py
homework_29/: asgi.py  settings.py  urls.py  wsgi.py
homework_30/: asgi.py  settings.py  urls.py  wsgi.py
users/: models.py  serializers.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options_remove_user_location_and_more.py
